[gd_scene load_steps=2 format=3 uid="uid://cumgxdh871qog"]

[ext_resource type="Script" path="res://addons/dialoguecreator/Scripts/Nodes/DCActionNodePort.gd" id="1_lnd7x"]

[node name="ActionNodePort" type="HBoxContainer"]
offset_right = 290.0
offset_bottom = 31.0
size_flags_horizontal = 3
script = ExtResource("1_lnd7x")

[node name="PortNameLineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="UpTextButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "^"

[node name="DownTextButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "v"

[node name="DeleteTextButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "x"

[connection signal="pressed" from="HBoxContainer/UpTextButton" to="." method="_on_up_text_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DownTextButton" to="." method="_on_down_text_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteTextButton" to="." method="_on_delete_text_button_pressed"]
